# Multi-Modal-2D-Data-Fusion

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  demo.ipynb  pyproject.toml  release-please-config.json  requirements.txt  setup.py
.github/workflows/: publish.yml
EDX/: CoSX_cs_eds.py  data_fusion.ipynb  fusion_utils.py
fused_mm/: fusion.py  utils.py
multimodal_fusion/: __init__.py  fusion.py  pyreg.py  utils.py
regularization/: Makefile  bindings.cpp  ctvlib.cpp  ctvlib.hpp
