[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "fused_mm"
dynamic = ["version"]
description = "Multi-Modal 2D Data Fusion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jonathan Schwartz", email = "jtschwar@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pybind11",
    "numpy",
    "scipy",
    "h5py",
]

[project.urls]
Homepage = "https://github.com/jtschwar/Multi-Modal-2D-Data-Fusion"
Repository = "https://github.com/jtschwar/Multi-Modal-2D-Data-Fusion"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "fused_mm/__init__.py"

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"