[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-fusion"
version = "0.2.0"
description = "Multi-Modal Electron Microscopy Data Fusion"
authors = [{name = "Jonathan Schwartz", email = "jtschwar@umich.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib", 
    "h5py",
    "tqdm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jtschwar/Multi-Modal-2D-Data-Fusion"
Repository = "https://github.com/jtschwar/Multi-Modal-2D-Data-Fusion.git"
Issues = "https://github.com/jtschwar/Multi-Modal-2D-Data-Fusion/issues"

# Add this section to specify which packages to include
[tool.setuptools.packages.find]
include = ["multimodal_fusion*"]
exclude = ["EDX*", "thirdparty*", "regularization*", "third_party*"]